crates/lang/macro/tests/ui/fail/C-15-trait-payable-constructor.stderr
error: encountered conflicting ink! attribute argument
  --> $DIR/C-15-trait-payable-constructor.rs:15:28
   |
15 |         #[ink(constructor, payable)]
   |                            ^^^^^^^

error: constructor is implicitly payable
  --> $DIR/C-15-trait-payable-constructor.rs:15:28
   |
15 |         #[ink(constructor, payable)]
   |                            ^^^^^^^
